@@ -1,6 +1,6 @@
 # application
 xdg_apps_DATA = siduxcc-gtk2.desktop
-bin_SCRIPTS = siduxcc-gtk2
+bin_SCRIPTS = siduxcc-gtk2 sidux-hermes-gtk2
 
 sharedir = $(pkgdatadir)
 install-data-local:
